fix align

--- a/src/App.css
+++ b/src/App.css
@@ -4152,6 +4152,7 @@ main {
   display: flex;
   align-items: center;
   column-gap: 10px;
+  text-align: left;
 }
 
 .iconTags {
